# album-copa

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: deploy-pages.yml
backend/: .env.example  pyproject.toml
backend/apps/figurinhas/: admin.py  apps.py  audit.py  filters.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/figurinhas/management/commands/: importar_catalogo.py  popular_bandeiras.py
backend/apps/figurinhas/migrations/: 0001_initial.py  0002_selecao_alterado_por_selecao_bandeira_and_more.py
backend/apps/figurinhas/tests/: test_api_figurinhas.py  test_api_progresso.py  test_api_quantidade.py  test_auditoria.py  test_importar_catalogo.py  test_models.py
backend/config/: settings.py  settings_test.py  urls.py
backend/scripts/: gerar_placeholders.py
backend/utils/: api.py  models.py
frontend/: .gitignore  angular.json  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.html  styles.scss
frontend/src/app/: app.config.ts  app.routes.ts
frontend/src/app/core/http/: erro.interceptor.ts  ngrok.interceptor.ts
frontend/src/app/core/services/: figurinhas.service.ts
frontend/src/app/features/album/: album.logic.spec.ts  album.logic.ts  album.routes.ts
frontend/src/app/features/album/models/: album-view.model.ts  erro.model.ts  figurinha.model.ts  paginacao.model.ts  progresso.model.ts  time.model.ts
frontend/src/environments/: environment.prod.ts  environment.ts
frontend/src/styles/: _breakpoints.scss
(+5 files in other folders)
