[project]
name = "album-copa-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "Django>=4.2,<5.0",
    "mysqlclient>=2.2",
    "djangorestframework>=3.15",
    "django-environ>=0.11",
    "django-cors-headers>=4.3",
    "django-auditlog>=2.3",
    "structlog>=24.1",
    "django-structlog>=8.0",
    "Pillow>=10.0",
    "opentelemetry-distro>=0.45b0",
    "opentelemetry-exporter-otlp>=1.24",
    "gunicorn>=22.0",
    "django-unfold>=0.89.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-django>=4.8",
]
